--- a/mission-01/term.html
+++ b/mission-01/term.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>term</title>
-    <link rel="stylesheet" href="/css/term.css" />
+    <link rel="stylesheet" href="./css/term.css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
                 <p>웹 관련 용어</p>
             </header>
             <dl class="term clearfix">
-                <dd class="w3c1"><img src="/assets/web_standards1.png" alt="w3c" /></dd>
+                <dd class="w3c1"><img src="./assets/web_standards1.png" alt="w3c" /></dd>
                 <dd>
                     <p>웹 표준 이란?</p>
                     <span>단체에서 규정한 웹<br>기술 사양에 대한 규칙을<br>말하며 표준 규격은...</span>
@@ -25,7 +25,7 @@
             <dl class="term2 clearfix">
                 <dd>
                     <p>웹 표준 이란?</p><span>W3C 단체에서 규정한 웹<br>기술 사양에 대한 규칙을<br>말하며 표준 규격은...</span>
-                <dd class="w3c2"><img src="/assets/web_standards1.png" alt="w3c" /></dd>
+                <dd class="w3c2"><img src="./assets/web_standards1.png" alt="w3c" /></dd>
                 </dd>
             </dl>
         </div>
