--- a/mission-01/validation.html
+++ b/mission-01/validation.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/validation.css" />
+    <link rel="stylesheet" href="./css/validation.css" />
     <title>validation</title>
 </head>
 
 <body>
         <main>
             <ul>
-                <li class="first"><a href="../assets/validation_icon2.png">W3C Markup Validation</a></li>
-                <li class="second"><a href="../assets/validation_icon2.png">CSS Validation Service</a></li>
+                <li class="first"><a href="../mission-01/assets/validation_icon2.png">W3C Markup Validation</a></li>
+                <li class="second"><a href="../mission-01/assets/validation_icon2.png">CSS Validation Service</a></li>
             </ul>
         </main>
 </body>
