--- a/mission-01/term.html
+++ b/mission-01/term.html
@@ -24,7 +24,8 @@
             </dl>
             <dl class="term2 clearfix">
                 <dd>
-                    <p>웹 표준 이란?</p><span>W3C 단체에서 규정한 웹<br>기술 사양에 대한 규칙을<br>말하며 표준 규격은...</span>
+                    <p>웹 표준 이란?</p>
+                    <span>W3C 단체에서 규정한 웹<br>기술 사양에 대한 규칙을<br>말하며 표준 규격은...</span>
                 <dd class="w3c2"><img src="./assets/web_standards1.png" alt="w3c" /></dd>
                 </dd>
             </dl>
