--- a/mission-02/login.html
+++ b/mission-02/login.html
@@ -5,19 +5,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./login.css" />
+    <link rel="stylesheet" href="./login.css">
     <title>로그인 화면 만들기</title>
 </head>
 
 <body>
-    <header class="loginHeader">
+    <main>
+        <header >
+            <h1 class="login">
+                <p>로그인</p>
+            </h1>
+        </header>
+        <section class="inner">
+        <form action="https://formspree.io/f/xeqwwbwk" method="POST">
+            <fieldset class="device">
+                <legend>로그인 폼</legend>
+                <div class="logingroup">
+                    <div>
+                        <label for="userName">아이디</label>
+                        <input type="text" id="userName" name="userName" placeholder="euid@euid.de">
+                    </div>
+                    <div>
+                        <label for="password">비밀번호</label>
+                        <input type="password" id="password" name="password" placeholder="8자리이상">
+                    </div>
+                        <button type="submit" class="button">로그인</button>
+            </fieldset>
+            <span class="line"></span> 
+            <ul class="mine">
+                <li><a href="/">&gt; 회원가입</a></li>
+                <li><a href="/">&gt; 아이디 비밀번호 찾기</a></li>
+            </ul>
+        </section>
+    </main>
+</body>
+
+</html>
+
+
+
+<!--  <header class="loginHeader">
         <h1 class="login">
             <p>로그인</p>
         </h1>
-        <form action="https://formspree.io/f/xeqwwbwk" method="POST" class="loginForm">
-            <fieldset>
+        <form action="https://formspree.io/f/xeqwwbwk" method="POST">
+            <fieldset class="device">
                 <legend>로그인 폼</legend>
-             <div class="logingroup">
+                <div class="logingroup">
                     <div>
                         <label for="text">아이디</label>
                         <input type="text" id="text" name="userName" placeholder="euid@euid.de">
@@ -25,18 +59,16 @@
                     <div>
                         <label for="password">비밀번호</label>
                         <input type="password" id="text" name="password" placeholder="8자리이상">
+                    </div>
+                    <div>
                         <button type="submit" class="button">로그인</button>
                     </div>
                     <span class="line"></span>
+                        <ul class="mine">
+                            <li><a href="/">&gt; 회원가입</a></li>
+                            <li><a href="/">&gt; 아이디 비밀번호 찾기</a></li>
+                        </ul>
                 </div>
-             </div>
-                <ul>
-                    <li><a href="/">&gt; 회원가입</a></li>
-                    <li><a href="/">&gt; 아이디 비밀번호 찾기</a></li>
-                </ul>
             </fieldset>
 
-    </header>
-</body>
-
-</html>
+    </header> -->
