--- a/mission-02/login.html
+++ b/mission-02/login.html
@@ -11,32 +11,30 @@
 
 <body>
     <main>
-        <header>
-            <h1 class="login">
-                <p>로그인</p>
-            </h1>
-        </header>
-        <section class="inner">
-            <form action="https://formspree.io/f/xeqwwbwk" method="POST">
-                <fieldset class="device">
-                    <legend>로그인 폼</legend>
-                    <div class="logingroup">
-                        <div>
-                            <label for="userName">아이디</label>
-                            <input type="text" id="userName" name="userName" placeholder="euid@euid.de">
+        <section class="로그인 화면 만들기">
+            <h1 class="login__title">로그인</h1>
+            <div class="inner">
+                <form action="https://formspree.io/f/xeqwwbwk" method="POST">
+                    <fieldset class="device">
+                        <legend>로그인 폼</legend>
+                        <div class="logingroup">
+                            <div>
+                                <label for="userName">아이디</label>
+                                <input type="text" id="userName" name="userName" placeholder="euid@euid.de">
+                            </div>
+                            <div>
+                                <label for="password">비밀번호</label>
+                                <input type="password" id="password" name="password" placeholder="8자리이상">
+                            </div>
                         </div>
-                        <div>
-                            <label for="password">비밀번호</label>
-                            <input type="password" id="password" name="password" placeholder="8자리이상">
-                        </div>
-                    </div>
-                    <button type="submit" class="button">로그인</button>
-                </fieldset>
-                <span class="line"></span>
-                <ul class="mine">
-                    <li><a href="/"> &gt;회원가입</a></li>
-                    <li><a href="/"> &gt;아이디 비밀번호 찾기</a></li>
-                </ul>
+                        <button type="submit" class="button">로그인</button>
+                    </fieldset>
+                    <span class="line"></span>
+                        <ul class="mine">
+                            <li class="mine1"><a href="/"> &gt;회원가입</a></li>
+                            <li class="mine2"><a href="/"> &gt;아이디 비밀번호 찾기</a></li>
+                        </ul>
+            </div>
         </section>
     </main>
 </body>
