--- a/mission-04/gird.html
+++ b/mission-04/gird.html
@@ -17,7 +17,7 @@
             </div>
             <div>
                 <div class="image-container">
-                    <img class="image-main" src="./mission-01/assets/news 1.png" alt="w3c 리뉴얼">
+                    <img class="image-main" src="./../mission-01/assets/news 1.png" alt="w3c 리뉴얼">
                     <p class="image-text">W3C 리뉴얼</p>
                 </div>
             </div>
